# SandNet

./: .gitignore  .readthedocs.yml  LICENSE  README.md  SOURCES.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docs.yml  python.yml
SandNet/: SandNet.py  __init__.py  __main__.py  __version__.py  multiplex.py  plots.py
docs/: requirements.txt
docs/source/: conf.py  index.rst  installation.rst
docs/source/API/: SandNet.rst  modules.rst  plots.rst
tests/: test_SandNet.py  test_SandNet_evolution.py  test_multiplex.py  test_multiplex_evolution.py  test_plots.py
